@@ -10,6 +10,7 @@
 //
 /////////////////////////////////////////////////////////////////////////////
 
+#include <Python.h>
 #include <iostream>
 #include "defs.h"
 
@@ -186,7 +187,6 @@ Real machine_eps()
 
   return calc_machine_eps;
 }
-
 
 
 /////////////////////////////////////////////////////////////////////////////
